# analytics-cli

./: .envrc  .gitignore  .prettierignore  .rubocop.yml  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Cross.toml  Gemfile  Jenkinsfile  LICENSE  README.md  STYLEGUIDE.md  build.rs  eslint.config.mjs  get-analytics-cli  output.xml  rust-toolchain.toml  test_junit.xml
.cargo/: config.toml
.github/: CODEOWNERS  actionlint.yaml
.trunk/: trunk.yaml
api/: Cargo.toml
api/src/: auth.rs  call_api.rs  client.rs  error.rs  lib.rs  message.rs  urls.rs
bazel-bep/: Cargo.toml  LICENSE  README.md  build.rs
bazel-bep/proto/: action_cache.proto  build_event_stream.proto  build_events.proto
bazel-bep/proto/google/api/: field_behavior.proto  http.proto
bazel-bep/src/: lib.rs
bundle/: Cargo.toml  README.md
bundle/src/: bundle_meta.rs  bundler.rs  custom_tag.rs  files.rs  lib.rs  main.rs  traces.rs  types.rs
bundle/tests/: test_collection_props_test.rs
cli/: Cargo.toml  build.rs
cli-tests/: Cargo.toml
cli-tests/src/: command_builder.rs  main.rs  quarantine.rs  test.rs  upload.rs  utils.rs  validate.rs
cli-tests/test_fixtures/: bep_retries
cli-tests/tests/: test.rs  upload.rs  validate.rs
cli/examples/: minimal.rs
cli/src/: bundler.rs  clients.rs  codeowners.rs  constants.rs  context.rs  context_quarantine.rs  end_output.rs  error_report.rs  junit_utils.rs  lib.rs  main.rs  print.rs  quarantine.rs  quarantine_command.rs  report_limiting.rs  runner.rs  scanner.rs  shutdown.rs  summary_output.rs  test.rs  test_command.rs  types.rs  upload.rs  upload_command.rs  utils.rs  validate.rs  validate_command.rs  xcresult.rs
cli/src/api_client/: call_api.rs  mod.rs
cli/test_fixtures/: bep_example  bep_with_unknown_fields.json  junit0_fail.xml  junit0_fail_suite_timestamp.xml  junit0_pass.xml  junit0_pass_suite_timestamp.xml  junit1_fail.xml  junit1_pass.xml
cli/tests/: scanner.rs  test.rs  upload.rs  validate.rs  xcresult.rs
cli/tests/common/: command_builder.rs  mod.rs  utils.rs
cli/tests/test_utils/: mock_git_repo.rs  mock_server.rs  mod.rs
codeowners/: Cargo.toml  README.md
codeowners/benches/: matching.rs
codeowners/examples/: ac_value.rs  glob_compare.rs  parse_profile.rs  real_bench.rs  stress.rs
codeowners/src/: codeowners.rs  github.rs  lib.rs  main.rs  traits.rs
codeowners/src/gitlab/: entry.rs  error.rs  file.rs  mod.rs  reference_extractor.rs  section.rs  section_parser.rs  user.rs
codeowners/test_fixtures/github/: codeowners_example
codeowners/test_fixtures/gitlab/: codeowners_example  mixed_case_sectional_codeowners_example  sectional_codeowners_example
constants/: Cargo.toml
context/: Cargo.toml
context-js/: .gitignore  Cargo.toml  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
context-js/src/: lib.rs
context-js/tests/: meta.test.ts  parse_and_validate.test.ts  parse_compressed_bundle.test.ts
context-py/: .gitignore  Cargo.toml  README.md  context_py.pyi  process_bundle.py  pyproject.toml  requirements-dev.txt
context-py/src/: junit_report.rs  lib.rs  py_bytes_read.rs
context-py/tests/: test_env_parse_and_validate.py  test_extract_compressed_bundle.py  test_junit_parse.py  test_junit_validate.py  test_meta.py  test_meta_validate.py  test_parse_and_validate.py  test_parse_codeowners.py  test_parse_compressed_bundle.py  test_parse_compressed_codeowners.py  test_parse_meta.py  test_repo_validate.py
context-ruby/: .gitignore  Cargo.toml  Gemfile  Rakefile  context_ruby.gemspec  junit.xml  setup-x86_64-linux-gnu.sh  trunk_analytics.gemspec
context-ruby/ext/context_ruby/: Cargo.toml  context_ruby.gemspec  extconf.rb
context-ruby/ext/context_ruby/src/: lib.rs
context/src/: lib.rs  main.rs  string_safety.rs
context/src/bazel_bep/: README.md  binary_parser.rs  common.rs  mod.rs  parser.rs
context/src/env/: mod.rs  parser.rs  validator.rs
context/src/junit/: bindings.rs  date_parser.rs  file_extractor.rs  junit_path.rs  mod.rs  parser.rs  validator.rs
context/src/junit/bindings/: mod.rs  report.rs  suite.rs  test_case.rs  validation.rs
context/src/meta/: bindings.rs  id.rs  mod.rs  validator.rs
context/src/repo/: mod.rs  validator.rs
context/src/test_report/: report.rs
context/test_fixtures/: bep_flaky_summary  bep_partially_valid  bep_retries  bep_unknown_fields  bep_unknown_fields.json
context/tests/: env.rs  junit.rs  meta.rs  repo.rs  string_safety.rs
context/tests/env/: bitbucket.rs  buildkite.rs  circleci.rs  custom.rs  drone.rs  github.rs  gitlab.rs  semaphore.rs
display/: Cargo.toml
github-actions/: Cargo.toml  README.md
github-actions/src/: lib.rs  main.rs
junit-mock/: Cargo.toml
junit-mock/src/: lib.rs  main.rs
owners-glob/: Cargo.toml
proto/: Cargo.toml
proto/proto/: common.proto  test_context.proto  upload_metrics.proto
proto/src/: build.rs  lib.rs  main.rs  test_context.rs  upload_metrics.rs
rspec-trunk-flaky-tests/: .gitignore  Cargo.toml  Gemfile  README.md  Rakefile  rspec_trunk_flaky_tests.gemspec
smoke-test/: Cargo.toml
src/: bundler.rs  clients.rs  constants.rs  lib.rs  (+5 more)
test_report/: Cargo.toml
test_report/src/: lib.rs  report.rs
test_report/tests/: publish.rs  quarantine.rs  report.rs  telemetry.rs
test_report/tests/common/: env.rs  mod.rs
test_utils/: Cargo.toml
test_utils/src/: inputs.rs  lib.rs  mock_git_repo.rs  mock_logger.rs  mock_sentry.rs  mock_server.rs
xcresult/: CONTRIBUTING.md  Cargo.toml  build.rs  create-xcrun-xcresulttool-formatDescription-get---format-json---legacy-json-schema.py  create-xcrun-xcresulttool-get-test-results-tests-json-schema.py  xcrun-xcresulttool-formatDescription-get---format-json---legacy-json-schema.json  xcrun-xcresulttool-get-test-results-tests-json-schema.json
xcresult/src/: lib.rs  main.rs  types.rs  xcresult.rs  xcresult_legacy.rs  xcrun.rs
xcresult/tests/: xcresult.rs
xcresult/tests/data/: test-ExpectedFailures.junit.xml  test-swift-mix.junit.xml  test-swift-snapshot-testing.junit.xml  test-swift-without-test-suites.junit.xml  test1.junit.xml  test4.junit.xml
(+75 files in other folders)
