[workspace]
members = [
  "api",
  "cli",
  "cli-tests",
  "codeowners",
  "context",
  "context-js",
  "context-py",
  "context-ruby/ext/context_ruby",
  "junit-mock",
  "test_utils",
  "xcresult",
]
resolver = "2"

[profile.release]
strip = true
codegen-units = 1
debug = false
lto = "thin"
opt-level = "s"
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"
panic = "unwind"
strip = false

[profile.dev.package."*"]
debug = true
incremental = true

[profile.dev]
opt-level = 0
debug = true
incremental = true
