[workspace]
members = [
  "api",
  "cli",
  "codeowners",
  "context",
  "context-js",
  "context-py",
  "github-actions",
  "junit-mock",
  "proto",
  "smoke-test",
  "test_utils",
  "xcresult",
  "test_report",
  "third-party",
  "display",
]
exclude = ["rspec-trunk-flaky-tests/ext/context_ruby"]
resolver = "2"

[profile.release]
strip = true
codegen-units = 1
debug = false
lto = "thin"
opt-level = "s"
panic = "abort"

[profile.release-with-debug]
inherits = "release"
debug = true
split-debuginfo = "packed"
panic = "unwind"
strip = false

[profile.dev.package."*"]
debug = true
incremental = true

[profile.dev]
opt-level = 0
debug = true
incremental = true
