[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
context = { path = "../context" }
display = { path = "../display" }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
bundle = { path = "../bundle" }
tokio = { version = "*", default-features = false, features = [
  "rt-multi-thread",
  "macros",
] }
anyhow = "1.0.44"
reqwest = { version = "0.12.5", default-features = false, features = [
  "rustls-tls-native-roots",
  "stream",
  "json",
] }
http = "1.1.0"
tokio-retry = { version = "0.3", default-features = false }
constants = { version = "0.0.0", path = "../constants" }
tracing = "0.1.41"
url = "2.5.4"
proto = { version = "0.0.0", path = "../proto" }
prost = "0.12.6"

[dev-dependencies]
axum = { version = "0.7.5", features = ["macros"] }
tokio = { version = "*", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "test-util",
  "time",
] }
tempfile = "3.2.0"
test_utils = { path = "../test_utils" }
lazy_static = "1.5.0"
