[package]
name = "bazel-bep"
version = "0.2.2"
edition = "2021"
description = "Message definitions for bazel's Build Event Protocol"
license = "MIT"
repository = "https://github.com/ChristianBelloni/bazel-bep"

[dependencies]
tonic = { version = "0.11.0", default-features = false, features = [
  "codegen",
  "prost",
] }
prost = "0.12.6"
prost-types = "0.12.6"
pbjson = "0.6.0"
pbjson-types = "0.6.0"
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_json = "1.0.133"

[build-dependencies]
tonic-build = "0.11.0"
prost-build = "0.12.6"
pbjson-build = "0.6.2"
protox = "0.6.1"

[features]
default = []
client = ["tonic/transport"]
server = []
