[package]
name = "bundle"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
codeowners = { path = "../codeowners" }
proto = { path = "../proto" }
constants = { path = "../constants" }
prost = "0.12.6"
context = { path = "../context", default-features = false }
js-sys = { version = "0.3.70", optional = true }
log = "0.4.14"
tempfile = "3.2.0"
glob = "0.3.0"
regex = { version = "1.10.3", default-features = false, features = ["std"] }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_json = "1.0.133"
tracing = "0.1.41"
tsify-next = { version = "0.5.4", optional = true }
wasm-bindgen = { version = "0.2.95", optional = true }
pyo3-stub-gen = { version = "0.6.0", optional = true }

# For encoding
async-compression = { version = "0.4.17", features = ["futures-io", "zstd"] }
async-std = { version = "1.13.0", features = ["attributes", "std"] }
async-tar-wasm = { version = "0.4.2-wasm.1", default-features = false }
futures-io = "0.3.31"
tar = { version = "0.4.30", default-features = false }
uuid = { version = "1.10.0", features = ["v5"] }
zstd = { version = "0.13.0", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
pyo3 = { version = "0.22.5", optional = true, features = [
  "abi3-py39",
  "extension-module",
] }

[target.'cfg(target_os = "macos")'.dependencies]
pyo3 = { version = "0.22.5", optional = true, features = ["abi3-py39"] }

[dev-dependencies]
tokio = { version = "*" }

[features]
bindings = []
wasm = [
  "bindings",
  "dep:wasm-bindgen",
  "dep:js-sys",
  "dep:tsify-next",
  "codeowners/wasm",
  "context/wasm",
]
pyo3 = [
  "bindings",
  "dep:pyo3",
  "dep:pyo3-stub-gen",
  "codeowners/pyo3",
  "context/pyo3",
]
