[package]
name = "cli-tests"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
assert_cmd = "2.0.16"
bazel-bep = { path = "../bazel-bep" }
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive", "env"] }
constants = { path = "../constants" }
escargot = "0.5.12"
junit-mock = { path = "../junit-mock" }
lazy_static = "1.4"
prost = "0.12.6"
serde_json = "1.0.133"
tempfile = "3.2.0"
test_utils = { path = "../test_utils" }

[dev-dependencies]
anyhow = "1.0.96"
api = { path = "../api" }
assert_matches = "1.5.0"
axum = { version = "0.7.5", features = ["macros"] }
bundle = { path = "../bundle" }
codeowners = { path = "../codeowners" }
context = { path = "../context" }
exitcode = "1.1.1"
humantime = "2.2.0"
more-asserts = "0.3.1"
predicates = "3.0.3"
prost = "0.12.6"
prost-wkt-types = { version = "0.5.1", features = ["vendored-protox"] }
proto = { version = "0.0.0", path = "../proto" }
pretty_assertions = "0.6"
serde_json = "1.0.133"
superconsole = "0.2.0"
tokio = { version = "*" }
trunk-analytics-cli = { path = "../cli", features = ["force-sentry-env-dev"] }

[features]
default = []
wasm = []
