[package]
name = "trunk-analytics-cli"
edition = "2021"
# Must be 0.0.0 in order for release workflow to update
version = "0.0.0"

[[bin]]
name = "trunk-analytics-cli"
path = "src/main.rs"

[lib]
name = "trunk_analytics_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.44"
api = { path = "../api" }
bundle = { path = "../bundle" }
constants = { path = "../constants" }
chrono = { version = "0.4.33", default-features = false, features = ["clock"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
context = { path = "../context" }
env_logger = { version = "0.11.0", default-features = false }
log = "0.4.14"
exitcode = "1.1.1"
http = "1.1.0"
tokio = { version = "*", default-features = false, features = [
  "rt-multi-thread",
  "macros",
] }
tempfile = "3.2.0"
tokio-retry = { version = "0.3", default-features = false }
glob = "0.3.0"
reqwest = { version = "0.12.5", default-features = false, features = [
  "rustls-tls-native-roots",
  "stream",
  "json",
] }
codeowners = { path = "../codeowners" }
xcresult = { path = "../xcresult" }
sentry = { version = "0.34.0", features = ["debug-images"] }
openssl = { version = "0.10.66", features = ["vendored"] }
openssl-src = "=300.3.1+3.3.1"
quick-junit = "0.5.0"
colored = "2.1.0"
console = "0.15.8"

[dev-dependencies]
axum = { version = "0.7.5", features = ["macros"] }
lazy_static = "1.5.0"
test_utils = { path = "../test_utils" }
tokio = { version = "*", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "test-util",
] }

[build-dependencies]
vergen = { version = "8.3.1", features = [
  "build",
  "cargo",
  "git",
  "gitcl",
  "rustc",
  "si",
] }

[features]
force-sentry-env-dev = []
