[package]
name = "trunk-analytics-cli"
edition = "2021"
# Must be 0.0.0 in order for release workflow to update
version = "0.0.0"

[[bin]]
name = "trunk-analytics-cli"
path = "src/main.rs"

[lib]
name = "trunk_analytics_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.44"
api = { path = "../api" }
bundle = { path = "../bundle" }
constants = { path = "../constants" }
chrono = { version = "0.4.33", default-features = false, features = ["clock"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
context = { path = "../context" }
third-party = { path = "../third-party" }
env_logger = { version = "0.11.0", default-features = false }
log = "0.4.14"
exitcode = "1.1.1"
http = "1.1.0"
tokio = { version = "*", default-features = false, features = [
  "rt-multi-thread",
  "macros",
] }
tempfile = "3.2.0"
tokio-retry = { version = "0.3", default-features = false }
tracing = "0.1.41"
tracing-log = "0.2.0"
tracing-subscriber = "0.3.19"
glob = "0.3.0"
reqwest = { version = "0.12.5", default-features = false, features = [
  "rustls-tls-native-roots",
  "stream",
  "json",
] }
codeowners = { path = "../codeowners" }
xcresult = { path = "../xcresult" }
sentry-tracing = "0.36.0"
openssl = { version = "0.10.70", features = ["vendored"] }
openssl-src = { version = "=300.3.1", optional = true }
quick-junit = "0.5.0"
colored = "2.1.0"
console = "0.15.8"
serde_json = "1.0"
clap-verbosity-flag = "3.0.2"
toml = "0.8.20"
home = "0.5.9"

[dev-dependencies]
test_utils = { version = "0.1.0", path = "../test_utils" }

[build-dependencies]
vergen = { version = "8.3.1", features = [
  "build",
  "cargo",
  "git",
  "gitcl",
  "rustc",
  "si",
] }

[features]
force-sentry-env-dev = []
