[package]
name = "trunk-analytics-cli"
edition = "2021"
# Must be 0.0.0 in order for release workflow to update
version = "0.0.0"

[[bin]]
name = "trunk-analytics-cli"
path = "src/main.rs"

[lib]
name = "trunk_analytics_cli"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.44"
api = { path = "../api" }
bundle = { path = "../bundle" }
constants = { path = "../constants" }
github-actions = { path = "../github-actions" }
chrono = { version = "0.4.33", default-features = false, features = ["clock"] }
clap = { version = "4.4.18", features = ["derive", "env"] }
context = { path = "../context", features = ["bindings"] }
third-party = { path = "../third-party" }
display = { path = "../display" }
log = "0.4.14"
exitcode = "1.1.1"
http = "1.1.0"
tokio = { version = "*", default-features = false, features = [
  "rt-multi-thread",
  "macros",
] }
tempfile = "3.2.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
glob = "0.3.0"
reqwest = { version = "0.12.5", default-features = false, features = [
  "rustls-tls-native-roots",
  "stream",
  "json",
] }
codeowners = { path = "../codeowners" }
xcresult = { path = "../xcresult" }
sentry = "=0.36.0"
sentry-tracing = "0.36.0"
openssl = { version = "0.10.72", features = ["vendored"] }
openssl-src = { version = "=300.3.1", optional = true }
quick-junit = "0.5.0"
serde_json = "1.0"
clap-verbosity-flag = "3.0.2"
proto = { path = "../proto" }
regex = "1.11.1"
lazy_static = "1.5.0"
prost = "0.12.6"
superconsole = "0.2.0"
pluralizer = "0.5.0"

[dev-dependencies]
test_utils = { version = "0.1.0", path = "../test_utils" }
assert_cmd = "2.0.16"
assert_matches = "1.5.0"
axum = { version = "0.7.5", features = ["macros"] }
bazel-bep = { path = "../bazel-bep" }
humantime = "2.2.0"
junit-mock = { path = "../junit-mock" }
more-asserts = "0.3.1"
predicates = "3.0.3"
pretty_assertions = "0.6"
prost-wkt-types = { version = "0.5.1", features = ["vendored-protox"] }

[build-dependencies]
vergen = { version = "8.3.1", features = [
  "build",
  "cargo",
  "git",
  "gitcl",
  "rustc",
  "si",
] }

[features]
force-sentry-env-dev = []
