[package]
name = "codeowners"
edition = "2018"
version = "0.1.3"

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "0.6"
rand = "0.8.5"

[dependencies]
glob = "0.3"
regex = "1.2"
lazy_static = "1.4"
anyhow = "1.0.86"
thiserror = "1.0.63"
const_format = "0.2.33"
constants = { path = "../constants" }
fancy-regex = "0.13.0"
indexmap = "2.5.0"
js-sys = { version = "0.3.70", optional = true }
log = "0.4.14"
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = "1.0.68"
wasm-bindgen = { version = "0.2.95", optional = true }

[features]
bindings = []
wasm = ["bindings", "dep:wasm-bindgen", "dep:js-sys"]
