[package]
name = "codeowners"
edition = "2018"
version = "0.1.3"

[[bin]]
name = "check-codeowners"
path = "src/main.rs"

[dev-dependencies]
assert_matches = "1.5.0"
pretty_assertions = "0.6"
rand = "0.8.5"

[dependencies]
clap = { version = "4.4.18", features = ["derive", "env"] }
glob = "0.3"
regex = "1.2"
lazy_static = "1.4"
anyhow = "1.0.86"
thiserror = "1.0.63"
const_format = "0.2.33"
constants = { path = "../constants" }
fancy-regex = "0.13.0"
indexmap = "2.5.0"
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_json = "1.0.133"
tsify-next = { version = "0.5.4", optional = true }
wasm-bindgen = { version = "0.2.95", optional = true }
js-sys = { version = "0.3", optional = true }
pyo3-stub-gen = { version = "0.6.1", optional = true }
tokio = { version = "*", default-features = false, features = ["rt", "macros"] }
tracing = "0.1.41"
once_cell = "1.21.3"

[target.'cfg(target_os = "linux")'.dependencies]
pyo3 = { version = "0.26.0", optional = true, features = [
  "abi3-py39",
  "extension-module",
] }

[target.'cfg(target_os = "macos")'.dependencies]
pyo3 = { version = "0.26.0", optional = true, features = ["abi3-py39"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "*", default-features = false, features = [
  "rt-multi-thread",
  "macros",
  "test-util",
] }

[features]
bindings = []
wasm = ["bindings", "dep:wasm-bindgen", "dep:js-sys", "dep:tsify-next"]
pyo3 = ["bindings", "dep:pyo3", "dep:pyo3-stub-gen"]
