[package]
name = "context-js"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bundle = { path = "../bundle", default-features = false, features = ["wasm"] }
context = { path = "../context", default-features = false, features = ["wasm"] }
futures = "0.3.31"
log = "0.4.14"
js-sys = "0.3.70"
tsify-next = "0.5.4"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
wasm-streams = "0.4.2"
