[package]
name = "context-js"
# Needs to match package.json
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bundle = { path = "../bundle", default-features = false, features = ["wasm"] }
context = { path = "../context", default-features = false, features = ["wasm"] }
futures = "0.3.31"
log = "0.4.14"
js-sys = "0.3.70"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
wasm-streams = "0.4.2"
proto = { path = "../proto" }
prost = "0.12.6"
