[package]
name = "context-js"
# Needs to match package.json
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[dependencies]
bundle = { path = "../bundle", default-features = false, features = ["wasm"] }
context = { path = "../context", default-features = false, features = ["wasm"] }
futures = "0.3.31"
js-sys = "0.3.70"
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4"
wasm-streams = "0.4.2"
prost = "0.12.6"
chrono = "0.4.42"
speedate = "0.17.0"
