[package]
name = "context-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "context_py"
crate-type = ["cdylib"]

[dependencies]
context = { path = "../context", features = ["git-access", "pyo3"] }
pyo3 = "0.22.5"
