[package]
name = "context-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "context_py"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "bin/stub_gen.rs"

[dependencies]
context = { path = "../context", features = ["git-access", "pyo3"] }
pyo3 = { version = "0.22.5", features = ["abi3-py39", "extension-module"] }
pyo3-stub-gen = "0.6.0"
