[package]
name = "context-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "context_py"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "bin/stub_gen.rs"

[dependencies]
bundle = { path = "../bundle", default-features = false, features = ["pyo3"] }
codeowners = { path = "../codeowners" }
context = { path = "../context", features = ["git-access", "pyo3"] }
pyo3-stub-gen = "0.6.1"
futures-io = "0.3.31"
tokio = { version = "*", default-features = false, features = ["rt"] }
proto = { path = "../proto" }
prost = "0.12.6"

[target.'cfg(target_os = "linux")'.dependencies]
pyo3 = { version = "0.22.5", features = ["abi3-py39", "extension-module"] }

[target.'cfg(target_os = "macos")'.dependencies]
pyo3 = { version = "0.22.5", features = ["abi3-py39"] }

[target.'cfg(target_os = "windows")'.dependencies]
pyo3 = { version = "0.22.5", features = ["abi3-py39"] }
