[package]
name = "context"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
pretty_assertions = "0.6"
junit-mock = { path = "../junit-mock" }
test_utils = { path = "../test_utils" }
tempfile = "3.2.0"

[dependencies]
anyhow = "1.0.44"
chrono = "0.4.33"
gix = { version = "0.67.0", default-features = false, features = [
], optional = true }
js-sys = { version = "0.3.70", optional = true }
lazy_static = "1.5.0"
log = "0.4.14"
openssl = { version = "0.10.66", features = ["vendored"], optional = true }
openssl-src = { version = "=300.3.1+3.3.1", optional = true }
pyo3-stub-gen = { version = "0.6.0", optional = true }
quick-junit = "0.5.0"
quick-xml = "0.36.2"
regex = { version = "1.10.3", default-features = false, features = ["std"] }
serde = { version = "1.0.130", default-features = false, features = ["derive"] }
serde_json = "1.0.68"
speedate = "0.14.4"
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["v5"] }
wasm-bindgen = { version = "0.2.95", optional = true }

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen.git", rev = "9eda4ae169ad488d3d6f9af52981b5c5ceb46c11" }


[target.'cfg(target_os = "linux")'.dependencies]
pyo3 = { version = "0.22.5", optional = true, features = [
  "abi3-py39",
  "extension-module",
] }

[target.'cfg(target_os = "macos")'.dependencies]
pyo3 = { version = "0.22.5", optional = true, features = ["abi3-py39"] }

[features]
# DONOTLAND: TODO: TYLER FIGURE OUT THIS FEATURE
# default = ["git-access"]
default = []
git-access = ["dep:gix", "dep:openssl"]
bindings = []
pyo3 = ["bindings", "dep:pyo3", "dep:pyo3-stub-gen"]
wasm = ["bindings", "dep:wasm-bindgen", "dep:js-sys"]
