[package]
name = "context"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
pretty_assertions = "0.6"
junit-mock = { path = "../junit-mock" }
test_utils = { path = "../test_utils" }
tempfile = "3.2.0"
codeowners = { path = "../codeowners" }
itertools = "0.14.0"

[dependencies]
anyhow = "1.0.44"
bazel-bep = { path = "../bazel-bep" }
chrono = "0.4.33"
gix = { version = "0.74.0", default-features = false, features = [
], optional = true }
js-sys = { version = "0.3.70", optional = true }
lazy_static = "1.5.0"
log = "0.4.14"
openssl = { version = "0.10.72", features = ["vendored"], optional = true }
openssl-src = { version = "=300.3.1", optional = true }
pyo3-stub-gen = { version = "0.6.1", optional = true }
quick-junit = "0.5.0"
quick-xml = "0.36.2"
regex = { version = "1.10.3", default-features = false, features = ["std"] }
serde = { version = "1.0.215", default-features = false, features = ["derive"] }
serde_json = "1.0.133"
speedate = "0.14.4"
thiserror = "1.0.63"
tsify-next = { version = "0.5.4", optional = true }
uuid = { version = "1.10.0", features = ["v5"] }
wasm-bindgen = { version = "0.2.95", optional = true }
magnus = { version = "0.7.1", optional = true, default-features = false }
proto = { path = "../proto" }
prost-wkt-types = { version = "0.5.1", features = ["vendored-protox"] }
tracing = "0.1.41"
prost = "0.12.6"
codeowners = { version = "0.1.3", path = "../codeowners" }

[target.'cfg(target_os = "linux")'.dependencies]
pyo3 = { version = "0.26.0", optional = true, features = [
  "abi3-py39",
  "extension-module",
] }

[target.'cfg(target_os = "macos")'.dependencies]
pyo3 = { version = "0.26.0", optional = true, features = ["abi3-py39"] }

[target.'cfg(target_os = "windows")'.dependencies]
pyo3 = { version = "0.26.0", optional = true, features = [
  "abi3-py39",
  "generate-import-lib",
] }

[features]
# must be disabled to use wasm-bindings
default = ["git-access"]
git-access = ["dep:gix", "dep:openssl"]
bindings = []
pyo3 = ["bindings", "dep:pyo3", "dep:pyo3-stub-gen"]
wasm = ["bindings", "dep:wasm-bindgen", "dep:js-sys", "dep:tsify-next"]
ruby = ["bindings", "dep:magnus"]
