[package]
name = "junit-mock"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "junit-mock"
path = "src/main.rs"

[lib]
name = "junit_mock"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.44"
chrono = { version = "0.4.33" }
clap = { version = "4.4.18", features = ["derive", "env"] }
fake = "2.9.2"
humantime = "2.1.0"
quick-junit = "0.5.0"
quick-xml = "0.37.0"
rand = "0.8.5"
