[package]
name = "proto"
edition = "2021"
version = "0.0.0"
build = "src/build.rs"

[lib]
name = "proto"
path = "src/lib.rs"

[dependencies]
prost = "0.12.6"
prost-types = "0.12.6"
prost-wkt-types = { version = "0.5.1", features = ["vendored-protox"] }
serde = "1.0.215"

[build-dependencies]
prost-build = "0.12.6"
protox = "0.6.1"
