[package]
name = "test_report"
# Must be 0.0.0 in order for release workflow to update
version = "0.0.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2.95", optional = true }
third-party = { path = "../third-party" }
log = "0.4.14"
env_logger = { version = "0.11.0", default-features = false }
magnus = { version = "0.7.1", optional = true, default-features = false }
proto = { path = "../proto" }
trunk-analytics-cli = { path = "../cli" }
prost-wkt-types = { version = "0.5.1", features = ["vendored-protox"] }
prost = "0.12.6"
tempfile = "3.2.0"
chrono = "0.4.33"
serde_json = "1.0.133"
js-sys = { version = "0.3.70", optional = true }
tokio = "1.43.1"
anyhow = "1.0.94"
bundle = { path = "../bundle" }
tracing = "0.1.41"
sentry-tracing = "0.36.0"
tracing-subscriber = "0.3.19"
api = { version = "0.1.0", path = "../api" }
context = { version = "0.1.0", path = "../context" }
codeowners = { version = "0.1.3", path = "../codeowners" }
constants = { path = "../constants" }
reqwest = { version = "0.12.5", default-features = false, features = [
  "blocking",
  "native-tls",
  "json",
  "hickory-dns",
] }
http = "1.1.0"
url = "2.5.4"

[dev-dependencies]
assert_matches = "1.5.0"
bundle = { path = "../bundle" }
more-asserts = "0.3.1"
test_utils = { path = "../test_utils" }
serial_test = "3.1.1"

[features]
bindings = []
wasm = ["bindings", "dep:wasm-bindgen", "dep:js-sys"]
ruby = ["bindings", "dep:magnus"]
