[package]
name = "test_report"
# Must be 0.0.0 in order for release workflow to update
version = "0.0.0"
edition = "2021"

[dependencies]
wasm-bindgen = { version = "0.2.95", optional = true }
js-sys = { version = "0.3", optional = true }
third-party = { path = "../third-party" }
magnus = { version = "0.7.1", optional = true, default-features = false }
proto = { path = "../proto" }
trunk-analytics-cli = { path = "../cli" }
prost-wkt-types = { version = "0.5.1", features = ["vendored-protox"] }
prost = "0.12.6"
tempfile = "3.2.0"
chrono = "0.4.33"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.133"
tokio = "1.43.1"
anyhow = "1.0.94"
bundle = { path = "../bundle" }
tracing = "0.1.41"
sentry-tracing = "0.36.0"
tracing-subscriber = "0.3.19"
api = { version = "0.1.0", path = "../api" }
context = { version = "0.1.0", path = "../context" }
codeowners = { version = "0.1.3", path = "../codeowners" }
constants = { path = "../constants" }
uuid = { version = "1.10.0", features = ["v5"] }

[dev-dependencies]
assert_matches = "1.5.0"
bundle = { path = "../bundle" }
more-asserts = "0.3.1"
test_utils = { path = "../test_utils" }
serial_test = "3.1.1"
axum = { version = "0.7.5", features = ["macros"] }

[features]
bindings = []
wasm = ["bindings", "dep:wasm-bindgen", "dep:js-sys"]
ruby = ["bindings", "dep:magnus"]
