[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
api = { path = "../api" }
axum = { version = "0.7.5", features = ["macros"] }
git2 = "0.19.0"
junit-mock = { path = "../junit-mock" }
lazy_static = "1.4"
log = { version = "0.4.14", features = ["std"] }
sentry = "0.34.0"
tar = { version = "0.4.30", default-features = false }
tempfile = "3.2.0"
tokio = { version = "*", default-features = false, features = [
  "rt-multi-thread",
  "macros",
] }
tracing = "0.1.41"
zstd = { version = "0.13.0", default-features = false }
