[package]
name = "test_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
api = { path = "../api" }
axum = { version = "0.7.5", features = ["macros"] }
git2 = "0.19.0"
proto = { version = "0.0.0", path = "../proto" }
sentry = "=0.36.0"
tar = { version = "0.4.30", default-features = false }
tempfile = "3.2.0"
flate2 = "1.0.34"
tokio = { version = "*", default-features = false, features = [
  "rt-multi-thread",
  "macros",
] }
tracing = "0.1.41"
prost = "0.12.6"
zstd = { version = "0.13.0", default-features = false }
