[package]
name = "xcresult"
edition = "2021"
version = "0.0.0"

[[bin]]
name = "xcresult-to-junit"
path = "src/main.rs"

[lib]
name = "xcresult"
path = "src/xcresult.rs"

[dependencies]
anyhow = "1.0.89"
clap = { version = "4.4.18", features = ["derive", "env"] }
context = { path = "../context" }
chrono = "0.4.38"
indexmap = "2.6.0"
lazy_static = "1.5.0"
log = "0.4.22"
quick-junit = "0.5.0"
regex = "1.11.0"
serde_json = "1.0.133"

[dev-dependencies]
flate2 = "1.0.34"
tar = "0.4.42"
temp_testdir = "0.2.3"
