[package]
name = "xcresult"
edition = "2024"
version = "0.0.0"

[[bin]]
name = "xcresult-to-junit"
path = "src/main.rs"

[lib]
name = "xcresult"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.4.18", features = ["derive", "env"] }
context = { path = "../context", features = ["bindings"] }
lazy_static = "1.5.0"
tracing-subscriber = "0.3.19"
petgraph = { version = "0.7.1", default-features = false }
quick-junit = "0.5.0"
regex = "1.11.0"
serde = { version = "1.0.215", default-features = false }
serde_json = "1.0.133"
tracing = "0.1.41"
uuid = { version = "1.10.0", features = ["v5"] }

[dev-dependencies]
context = { path = "../context", features = ["bindings"] }
flate2 = "1.0.34"
pretty_assertions = "0.6"
tar = "0.4.42"
temp_testdir = "0.2.3"

[build-dependencies]
prettyplease = "0.2.29"
proc-macro2 = "1.0"
schemars = "0.8.21"
serde_json = "1.0.133"
syn = "2.0.96"
typify = "0.3.0"
