[package]
name = "context_ruby"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.93"
context = { path = "../../../context", features = ["git-access", "ruby"] }
magnus = { version = "0.7" }
rb-sys = "0.9.108"
test_report = { path = "../../../test_report", features = ["ruby"] }
